added links, and headings and photo

--- a/_templates/hello.html
+++ b/_templates/hello.html
@@ -1,6 +1,6 @@
 <figure class="profile-pic">
-  <img src="{{ pathto('_static/img/profile.png', 1) }}"
-  alt="an icon like image with U R I on the chest"/>
+  <img src="{{ pathto('_static/img/powerpuffgirls.gif', 1) }}"
+  alt="picture of bubbles LOL"/>
 </figure>
 
 <aside class="bio-info">
