deploy: 53139fe1a4e6253824b73923fbcfacf38c2ab64e

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="" />
 <meta property="og:site_name" content="My Gorgeous Beautiful Awesome Website" />
-<meta property="og:description" content="About Me Games I Am Playing I am a computer engineering major alt text" />
+<meta property="og:description" content="About Me Games I Am Playing I am a computer engineering major! alt text" />
 <meta property="og:image:width" content="1146" />
 <meta property="og:image:height" content="600" />
-<meta property="og:image" content="/_images/social_previews/summary_index_a57ed1e9.png" />
-<meta property="og:image:alt" content="About Me Games I Am Playing I am a computer engineering major alt text" />
-<meta name="description" content="About Me Games I Am Playing I am a computer engineering major alt text" />
+<meta property="og:image" content="/_images/social_previews/summary_index_bc88201a.png" />
+<meta property="og:image:alt" content="About Me Games I Am Playing I am a computer engineering major! alt text" />
+<meta name="description" content="About Me Games I Am Playing I am a computer engineering major! alt text" />
 <meta name="twitter:card" content="summary_large_image" />
 
     <title>&lt;no title&gt; &#8212; My Gorgeous Beautiful Awesome Website</title>
@@ -401,7 +401,7 @@ document.write(`
 <p><a href="https://probable-invention-pjrpg9w9q47vc96p6-8000.app.github.dev/About%20Me.html">About Me</a><br>
 <a href="https://probable-invention-pjrpg9w9q47vc96p6-8000.app.github.dev/Games-I-Am-Playing.html">Games I Am Playing</a><br></p>
 <h5>This is my awesome amazing website for TD, I have never done coding but this is super awesome and fun already.<h5>
-<p>I am a computer engineering major</p>
+<p>I am a computer engineering major!</p>
 <h1> Games Of the Month <h1>
 <p><img alt="alt text" src="_images/paliaforwebsite.jpg" /></p>
 <h1> Song of the Month <h1>
